## Copyright (c) 2009
## The libvtemm development team.

include $(top_srcdir)/libvte/src/filelist.am
include $(top_srcdir)/libvte/libvtemm/filelist.am

book_name = $(LIBVTEMM_MODULE_NAME)
doc_input = $(addprefix $(top_srcdir)/libvte/libvtemm/,$(files_built_h))

include $(top_srcdir)/build/doc-reference.am
